Remove need to check for file changes in dev branch

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,7 +28,7 @@ jobs:
         uses: dorny/paths-filter@v2
         id: changed_files
         with:
-          base: dev
+          # base: dev
           filters: |
             build_image:
               - 'Dockerfile'
