--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,13 @@ jobs:
               - 'Dockerfile'
               - 'Makefile'
 
-      - name: Log into registry
+      - name: Login to Docker Hub
         if: steps.changed_files.outputs.build_image == 'true'
-        run: echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
+        uses: docker/login-action@v3
+        with:
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: ghcr.io
 
       - name: Build docker image if any of those files changes
         if: steps.changed_files.outputs.build_image == 'true'
