--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,8 +47,10 @@ jobs:
         run: |
           make image
 
-      - name: PushGithubRegistry
+      - name: Push to Github Docker Registry
+        id: PushGithubRegistry
         if: steps.changed_files.outputs.build_image == 'true'
+        continue-on-error: true
         run: |
           IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME
 
@@ -71,7 +73,7 @@ jobs:
           docker push $IMAGE_ID:latest
       
       - name: login to docker hub
-        if: steps.changed_files.outputs.build_image == 'true' || steps.PushGithubRegistry.outcome != 'success'
+        if: steps.changed_files.outputs.build_image == 'true'        
         id: docker-hub
         env:
           username: ${{secrets.DOCKERHUB_USR}}
@@ -79,8 +81,8 @@ jobs:
         run: |
           docker login -u $username -p $password  
 
-      - name: Push image to Docker Registry
-        if: steps.changed_files.outputs.build_image == 'true'  || steps.PushGithubRegistry.outcome != 'success'
+      - name: Push to Docker Hub
+        if: steps.changed_files.outputs.build_image == 'true'
         run: |
           IMAGE_ID=ghcr.io/${{ github.repository }}/$IMAGE_NAME
 
